--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 100vw;
     background-color: #235490;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
